--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/emersion/node-magi-network#readme",
   "dependencies": {
     "brain": "^0.7.0",
-    "discovery-swarm": "^4.0.2"
+    "discovery-swarm": "^4.0.2",
+    "secure-gossip": "^0.2.2"
   }
 }
